# FaceLivenessDetection

./: README  README.md
FaceLivenessDetection/: CMakeLists.txt  LivenessDetection.cpp
FaceLivenessDetection.xcodeproj/: project.pbxproj
FaceLivenessDetection.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FaceLivenessDetection.xcodeproj/project.xcworkspace/xcuserdata/liuyan.xcuserdatad/: UserInterfaceState.xcuserstate
FaceLivenessDetection.xcodeproj/xcuserdata/liuyan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
FaceLivenessDetection.xcodeproj/xcuserdata/liuyan.xcuserdatad/xcschemes/: FaceLivenessDetection.xcscheme  xcschememanagement.plist
FaceLivenessDetection/LandmarkDetector/include/: LandmarkCoreIncludes.h  LandmarkDetectorUtils.h
FaceLivenessDetection/LandmarkDetector/src/: LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp
FaceLivenessDetection/LivenessDetection/: LivenessDetection.cpp  LivenessDetection.hpp
FaceLivenessDetection/PhotoProcess/: photoProcess.cpp
FaceLivenessDetection/exe/FaceLivenessDetection/: CMakeLists.txt
FaceLivenessDetection/lib/: libopencv_calib3d.3.2.0.dylib  libopencv_highgui.3.2.0.dylib  libopencv_objdetect.3.2.0.dylib  libopencv_optflow.3.2.0.dylib  libopencv_video.3.2.0.dylib  libopencv_videoio.3.2.0.dylib
FaceLivenessDetection/lib/local/FaceAnalyser/: CMakeLists.txt  FaceAnalyser.vcxproj
FaceLivenessDetection/lib/local/FaceAnalyser/AU_predictors/: AU_all_best.txt  AU_all_static.txt
FaceLivenessDetection/lib/local/FaceAnalyser/include/: FaceAnalyser.h  SVR_dynamic_lin_regressors.h
FaceLivenessDetection/lib/local/FaceAnalyser/src/: FaceAnalyser.cpp  Face_utils.cpp  GazeEstimation.cpp  SVM_dynamic_lin.cpp  SVM_static_lin.cpp  SVR_dynamic_lin_regressors.cpp  SVR_static_lin_regressors.cpp
FaceLivenessDetection/lib/local/LandmarkDetector/src/: LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  face_detection.cpp
FaceLivenessDetection/lib/local/LandmarkDetector的副本/: CMakeLists.txt
FaceLivenessDetection/lib/local/LandmarkDetector的副本/include/: LandmarkDetectorModel.h  LandmarkDetectorParameters.h
FaceLivenessDetection/lib/local/LandmarkDetector的副本/model/: main_clnf_general.txt
FaceLivenessDetection/lib/local/seetaFace/: CMakeLists.txt
